// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template > custom body after 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <meta name="description" content=" web interface">
        <meta property="og:title" content="">
        <meta property="og:description" content=" web interface">
        <meta property="og:type" content="website">
        <meta property="og:site_name" content="">
        <meta name="twitter:card" content="summary">
        <link rel="alternate" type="application/rss+xml" title=" feed" href="http://domain.com/-/verdaccio/data/feed">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        <script src="foo"/>
      </body>
    </html>
  "
`;

exports[`template > custom body before 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <meta name="description" content=" web interface">
        <meta property="og:title" content="">
        <meta property="og:description" content=" web interface">
        <meta property="og:type" content="website">
        <meta property="og:site_name" content="">
        <meta name="twitter:card" content="summary">
        <link rel="alternate" type="application/rss+xml" title=" feed" href="http://domain.com/-/verdaccio/data/feed">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        <script src="fooBefore"/><script src="barBefore"/>
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;

exports[`template > custom render 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <meta name="description" content=" web interface">
        <meta property="og:title" content="">
        <meta property="og:description" content=" web interface">
        <meta property="og:type" content="website">
        <meta property="og:site_name" content="">
        <meta name="twitter:card" content="summary">
        <link rel="alternate" type="application/rss+xml" title=" feed" href="http://domain.com/-/verdaccio/data/feed">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;

exports[`template > custom title 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title>foo title</title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <meta name="description" content="foo title web interface">
        <meta property="og:title" content="foo title">
        <meta property="og:description" content="foo title web interface">
        <meta property="og:type" content="website">
        <meta property="og:site_name" content="foo title">
        <meta name="twitter:card" content="summary">
        <link rel="alternate" type="application/rss+xml" title="foo title feed" href="http://domain.com/-/verdaccio/data/feed">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;

exports[`template > meta scripts 1`] = `
"
    <!DOCTYPE html>
      <html lang="en-us">
      <head>
        <meta charset="utf-8">
        <base href="http://domain.com/">
        <title></title>
        <link rel="icon" href="http://domain.com/-/static/favicon.ico">
        <meta name="viewport" content="width=device-width, initial-scale=1">
        <meta name="description" content=" web interface">
        <meta property="og:title" content="">
        <meta property="og:description" content=" web interface">
        <meta property="og:type" content="website">
        <meta property="og:site_name" content="">
        <meta name="twitter:card" content="summary">
        <link rel="alternate" type="application/rss+xml" title=" feed" href="http://domain.com/-/verdaccio/data/feed">
        <script src="http://domain.com/-/static/ui-options.js"></script>
        <link rel="stylesheet" href="http://domain.com/-/static/main.6f2f2cccce0c813b509f.css">
        <style>.someclass{font-size:10px;}</style>
      </head>
      <body class="body">
        
        <div id="root"></div>
        <script type="module" src="http://domain.com/-/static/runtime.6126058572f989c948b1.js"></script>
        <script type="module" src="http://domain.com/-/static/main.6126058572f989c948b1.js"></script>
        
      </body>
    </html>
  "
`;
